# clay

./: Cargo.toml  build.rs  concept.md  roadmap.md  skills-lock.json  todo.md
decision-logs/: 2026-05-08-0408-server-authoritative-documents-client-behavior-manifests.md  2026-05-08-1419-markdown-authoritative-documentation-registry.md  2026-05-08-1509-clay-js-api-facade-for-rust-functions.md  2026-05-08-1840-clay-js-api-discovery-keybindings-custom-properties.md  2026-05-08-1841-configuration-through-init-js-and-clay-js-apis.md  2026-05-08-1958-clay-js-api-naming-and-package-distribution.md
docs/: index.md
docs/development/: launch-and-gui-smoke.md  windows.md
docs/wiki/: index.md
plans/: 001-Phase0-NativeTextCanvas.md  002-Phase1-TextCanvasFoundation.md  003-Phase2-EditorInteractionModel.md  004-Phase3-IPC-Client-Server-Skeleton.md  004-Phase3-SelfDocumentingProgramContract.md  005-Phase4-IPC-Client-Server-Skeleton.md  006-Phase5-Versioned-Text-Synchronization-and-Leases.md  007-Phase6-Behavior-Manifest-System.md  008-Phase7-Clay-JS-API-Structure-and-Current-Functionality-Inventory.md  009-Phase8-Configuration-Foundation.md  010-Phase9-File-and-Workspace-Server.md  011-Windows-Platform-Support.md  012-Developer-Friendly-Launch-and-GUI-Smoke.md
runtime/js/: README.md  application.ts  behavior.ts  configuration.ts  documents.ts  editor.ts  keybindings.ts  mod.ts
src/: editor.rs  ipc.rs  lib.rs  main.rs  masonry_editor.rs
src/client/: mod.rs  (+1 more)
tests/: clay_js_api_inventory.rs  clay_js_doc_registry.rs  clay_js_facade_layout.rs  rust_visibility_api_mapping.rs
(+79 files in other folders)
