[package]
name = "clay"
version = "0.1.0"
edition = "2024"

[dependencies]
crop = "0.4.3"
deno_core = "0.400.0"
masonry = "0.4.0"
masonry_winit = "0.4.0"
parley = "0.6.0"
rkyv = "0.8.16"
softbuffer = "0.4.6"
taffy = "0.10.1"
tokio = { version = "1.52.2", features = ["full"] }
vello = "0.6.0"
wgpu = "26.0.1"
winit = "0.30.13"
